--- a/index.html
+++ b/index.html
@@ -1,29 +1,21 @@
 <!doctype html>
 <html>
 <head>
-<title>책 표지</title>
+<title>Silnun's IdeaBank</title>
 <meta charset="utf-8">
 </head>
 <body>
-  <h1><a href="index.html">가장 큰 제목</a></h1>
+  <h1><a href="index.html">Silnun's IdeaBank</a></h1>
     <ol>
-      <li><a href="1.html">HTML</a></li>
-      <li><a href="2.html">CSS</a></li>
-      <li><a href="3.html">JAVASCRIPT</a></li>
+      <li><a href="PsychologicalTest.html">심리테스트</a></li>
+      <li><a href="lotto.html">로또번호</a></li>
+      <li><a href="TradingBot.html">TradingBot</a></li>
     </ol>
-    <h2>html</h2>
-    <a href="https://www.w3schools.com/html/html_paragraphs.asp" target = "_blank" title = "툴팁">심리테스트를 시작하겠습니다.</a> <strong>진하게 표시하는 방법</strong>
-    <u>밑줄긋는 방법</u>
-    <p>1. 우선 html을 배운다.</p>
-    <p>2. css를 배운다.</p>
-    <p>3. javascript를 배운다.</p><p style= "margin-top:50px;">
-
-
-    <img src="coding.jpg" width ="200">
-    <p>활용<br>
-    1. webpage를 배운다.<br>
-    2. 심리테스트 page를 찾아본다.<br>
-    3. 어떤 item을 만들지 찾는다.<br>
-    4. 알고리즘을 구상한다.</p>
+    <img src ="cat.jpg" width ="400">
+    <h2>Overview</h2>
+    <p>Silnun's IdeaBank 에서는 추후 coding을 배움으로써 만들 예정인 idea를 기록하는 홈페이지이다.<br>
+      html,css,javascript는 <u>생활코딩</u>을 통해서 꾸준히 홈페이지를 만들어갈 예정이고, python은 <u>나도코딩</u>을 참조할 것이다.<br></p>
+    </p><strong>Part 1.</strong> 홈페이지 만들기 [<a href ="https://www.youtube.com/user/egoing2" title = "생활코딩" target = "_blank">생활코딩 youtube</a>]<br>
+      <strong>Part 1.</strong> Python [<a href ="https://www.youtube.com/channel/UC7iAOLiALt2rtMVAWWl4pnw" title = "나도코딩" target = "_blank">나도코딩 youtube</a>]<br></p>
 </body>
 </html>
